Added recipe/time table, search bar, and author footer

--- a/index.html
+++ b/index.html
@@ -2,10 +2,44 @@
  <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <tite>My First Webpage</tite>
+        <title>My First Webpage</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <ul>
+            <li><a href="recipes/lamb-shoulder-chop.html">Lamb Shoulder Chop</a></li>
+            <li><a href="recipes/beef-brisket.html">Beef Brisket</a></li>
+            <li><a href="recipes/thai-drumsticks.html">Thai Drumsticks</a></li>
+        </ul>
+
+        <table>
+            <tr>
+                <th>Recipe</th>
+                <th>Total Time</th>
+            </tr>
+            <tr>
+                <td>Lamb Shoulder Chop</td>
+                <td>20 minutes</td>
+            </tr>
+            <tr>
+                <td>Beef Brisket</td>
+                <td>2 hours</td>
+            </tr>
+            <tr>
+                <td>Thai Drumsticks</td>
+                <td>40 minutes</td>
+            </tr>
+        </table>
+
+        <form class="d-flex">
+            <input class="form-control me-sm-2" type="search" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+
+        <footer>
+            By Tyler Dang
+        </footer>
     </body>
  </html>
